--- a/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
@@ -4,13 +4,13 @@
 
 .news-details {
   width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 25px auto;
   padding: 10px 20px;
   border-radius: 20px;
 
   &__heading {
     color: grey;
+    margin-top: 0;
   }
 
   &__date {
@@ -21,8 +21,7 @@
     display: block;
     border-radius: 10px;
     width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto 50px auto;
   }
 
   &__description {
