adjust schedule styling for tablets

--- a/src/app/components/shared/working-hours/working-hours.component.scss
+++ b/src/app/components/shared/working-hours/working-hours.component.scss
@@ -78,4 +78,8 @@
     width: 46.875rem; // 750px
     grid-template-columns: 2fr 0.5fr;
   }
+
+  @media (min-width: 430px) {
+    grid-template-columns: 4fr 1fr;
+  }
 }
