--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -124,7 +124,7 @@
         text-shadow: 2px 2px 5px rgba(225, 134, 134, 0.5);
 
         @include atMedium{
-          font-size: 18px;
+          font-size: 1rem;
         }
       }
 
