add margin for the testimonials part and adjust font-size for gma heading

--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -337,7 +337,7 @@
 }
 
 .gma-heading {
-  font-size: 30px;
+  font-size: 25px;
   margin: 50px 0;
 }
 
@@ -350,7 +350,7 @@
 }
 
 .testimonials-heading {
-  margin-bottom: 50px;
+  margin: 25px 0 50px
 }
 
 .testimonials-container {
