add ng zorro lib and adjust styling according to it

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -34,6 +34,7 @@ $section-spacing: 0.9375rem; // 15px
     font-size: 1.5rem;
     font-weight: lighter;
     margin-bottom: 1.25rem;
+    color: #FFFFFF;
 
     @include atLarge {
       margin-top: 0;
