--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -38,6 +38,7 @@
     color: #FFFFFF;
     font-weight: 200;
     font-size: 19px;
+    margin-bottom: 0;
 
     @include atSmall {
       font-size: 22px;
@@ -108,6 +109,7 @@
     .nav_list {
       color: white;
       padding-left: 0;
+      margin-bottom: 0;
 
       li {
         text-align: center;
