--- a/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
+++ b/src/app/components/app-main-section/components/news-page-section/news-detail/news-detail.component.scss
@@ -5,12 +5,17 @@
 .news-details {
   width: 80%;
   margin: 0 auto 25px auto;
-  padding: 10px 20px;
+  padding: 10px 0;
   border-radius: 20px;
 
   &__heading {
     color: grey;
     margin-top: 0;
+    font-size: 1.9rem;
+
+    @include atMedium {
+      font-size: 3.4rem;
+    }
   }
 
   &__date {
@@ -31,5 +36,6 @@
 
   @include atMedium {
     background: rgba(255, 255, 255, 0.4);
+    padding: 10px 20px;
   }
 }
