--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -3,17 +3,35 @@
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/generic-content-container';
 
-.section-title,
+nz-form-label {
+  font-size: 1rem;
+}
+
+.ant-input,
+.ant-picker,
+.ant-select-selector {
+  font-size: 1rem;
+}
+
+.section-title {
+   color: grey;
+ }
+
 .form_header {
   text-align: center;
+  font-size: 1.5rem;
   color: grey;
+
+  @include atMedium{
+    font-size: 2rem;
+  }
 }
 
 .form-container {
   max-width: 760px;
   margin: 0 auto 100px;
   border-radius: 10px;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -25,65 +43,9 @@
   }
 }
 
-.name-fields {
-  display: block;
-
-  label:nth-child(1) {
-    margin-top: 10px;
-  }
-
-  @include atMedium {
-    display: flex;
-    gap: 10px;
-  }
-}
-
-.input-group {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-
-  label {
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-
-  input {
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-  }
-}
-
-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.radio-group {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: flex-start;
-  justify-content: center;
-
-  label {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-  }
-
-  @include atMedium {
-    flex-direction: row;
-    align-items: center;
-  }
-}
-
 .error {
   margin-top: 5px;
   color: red;
-  font-size: 14px;
 }
 
 button {
@@ -111,17 +73,31 @@ button {
 }
 
 select {
-  padding: 10px;
+  padding: 5px;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 100%;
-  box-sizing: border-box;
 }
+
+.custom-radio-group {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.custom-radio-group ::ng-deep .ant-radio-wrapper {
+  font-size: 16px; /* label text size */
+  padding: 4px 8px;
+}
+
+.custom-radio-group ::ng-deep .ant-radio {
+  transform: scale(1.3); /* scale up the circle */
+  margin-right: 8px;
+}
+
 
 @media (max-width: 768px) {
   input,
-  textarea,
+  label,
   select {
     font-size: 1rem;
   }
