--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -3,6 +3,11 @@
 @import '../../../../../assets/modules/section-title';
 @import '../../../../../assets/modules/generic-content-container';
 
+:host ::ng-deep .ant-picker,
+:host ::ng-deep .ant-picker-input > input {
+  font-size: 1rem !important;
+}
+
 nz-form-label {
   font-size: 1rem;
 }
