--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -14,61 +14,100 @@
   </ul>
   <app-google-map></app-google-map>
   <div class="page-section">
-    <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container">
+    <form nz-form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container" nzLayout="vertical">
       <h2 class="form_header">
         {{ 'MAIN.CONTACTS.CONTACTS_FORM.TITLE' | translate }}
       </h2>
-      <div class="name-fields">
-        <div class="input-group">
-          <label for="firstName">{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}</label>
-          <input id="firstName" type="text" formControlName="firstName"
-                 placeholder="{{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}"/>
-          <small *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched" class="error">
-            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
-          </small>
+
+      <div nz-row [nzGutter]="16">
+        <div nz-col [nzXs]="24" [nzSm]="12">
+          <nz-form-item>
+            <nz-form-label [nzFor]="'firstName'">
+              {{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}
+            </nz-form-label>
+            <nz-form-control [nzValidateStatus]="getNzStatus('firstName')">
+              <input nz-input id="firstName" formControlName="firstName"
+                     [placeholder]="'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate"/>
+              <nz-form-explain class="error"
+                               *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched">
+                {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
+              </nz-form-explain>
+            </nz-form-control>
+          </nz-form-item>
         </div>
 
-        <div class="input-group">
-          <label for="secondName">{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}</label>
-          <input id="secondName" type="text" formControlName="secondName"
-                 placeholder="{{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}"/>
-          <small *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched" class="error">
-            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
-          </small>
+        <div nz-col [nzXs]="24" [nzSm]="12">
+          <nz-form-item>
+            <nz-form-label [nzFor]="'secondName'">
+              {{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}
+            </nz-form-label>
+            <nz-form-control [nzValidateStatus]="getNzStatus('secondName')">
+              <input nz-input id="secondName" formControlName="secondName"
+                     [placeholder]="'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate"/>
+              <nz-form-explain *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched"
+                               class="error">
+                {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
+              </nz-form-explain>
+            </nz-form-control>
+          </nz-form-item>
         </div>
       </div>
 
-      <div class="input-group">
-        <label for="phoneNumber">{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}</label>
-        <input id="phoneNumber" type="tel" formControlName="phoneNumber"
-               placeholder="{{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}"/>
-        <small *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched" class="error">
-          {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
-        </small>
-      </div>
+      <nz-form-item>
+        <nz-form-label [nzFor]="'phoneNumber'">
+          {{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}
+        </nz-form-label>
+        <nz-form-control [nzValidateStatus]="getNzStatus('phoneNumber')">
+          <input nz-input id="phoneNumber" type="tel" formControlName="phoneNumber"
+                 [placeholder]="'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate"/>
+          <nz-form-explain *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched"
+                           class="error">
+            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
+          </nz-form-explain>
+        </nz-form-control>
+      </nz-form-item>
 
-      <!-- Email Field -->
-      <div class="input-group">
-        <label for="email">{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}</label>
-        <input id="email" type="email" formControlName="email"
-               placeholder="{{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}"/>
-        <small *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
-          {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
-        </small>
-      </div>
+      <nz-form-item>
+        <nz-form-label [nzFor]="'email'">
+          {{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}
+        </nz-form-label>
+        <nz-form-control [nzValidateStatus]="getNzStatus('email')">
+          <input nz-input id="email" type="email" formControlName="email"
+                 [placeholder]="'MAIN.RESERVATIONS.FORM.E_MAIL' | translate"/>
+          <nz-form-explain *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
+            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
+          </nz-form-explain>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
 
-      <label for="feedback">{{ 'MAIN.SHARED.TEXTAREA.TITLE' | translate }}</label>
-      <textarea
-        id="feedback"
-        formControlName="feedback"
-        maxlength="1000"
-        rows="5"
-        placeholder="{{'MAIN.SHARED.TEXTAREA.PLACEHOLDER' | translate}}"
-      ></textarea>
+        <nz-form-item>
+          <nz-form-label [nzFor]="'feedback'">
+            {{ 'MAIN.SHARED.TEXTAREA.TITLE' | translate }}
+          </nz-form-label>
+          <nz-form-control [nzValidateStatus]="getNzStatus('feedback')" [nzSpan]="24" style="width: 100%;">
+    <textarea
+      nz-input
+      id="feedback"
+      formControlName="feedback"
+      rows="5"
+      maxlength="1000"
+      [placeholder]="'MAIN.SHARED.TEXTAREA.PLACEHOLDER' | translate">
+    </textarea>
+            <nz-form-explain class="error"
+                             *ngIf="userForm.get('feedback')?.invalid && userForm.get('feedback')?.touched">
+              {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FEEDBACK' | translate }}
+            </nz-form-explain>
+          </nz-form-control>
+        </nz-form-item>
 
-      <button type="submit" [disabled]="!userForm.valid">
-        {{ 'MAIN.CONTACTS.CONTACTS_FORM.SUBMIT' | translate }}
-      </button>
+        <nz-form-control>
+          <button type="submit" [disabled]="!userForm.valid">
+            {{ 'MAIN.RESERVATIONS.FORM.SUBMIT' | translate }}
+          </button>
+        </nz-form-control>
+      </nz-form-item>
+
       <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
     </form>
     <div class="modal-overlay" *ngIf="showModal">
