--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.html
@@ -14,78 +14,79 @@
   </ul>
   <app-google-map></app-google-map>
   <div class="page-section">
-    <form nz-form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container" nzLayout="vertical">
-      <h2 class="form_header">
-        {{ 'MAIN.CONTACTS.CONTACTS_FORM.TITLE' | translate }}
-      </h2>
+    <div class="form-test-wrapper">
+      <form nz-form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container" nzLayout="vertical">
+        <h2 class="form_header">
+          {{ 'MAIN.CONTACTS.CONTACTS_FORM.TITLE' | translate }}
+        </h2>
 
-      <div nz-row [nzGutter]="16">
-        <div nz-col [nzXs]="24" [nzSm]="12">
-          <nz-form-item>
-            <nz-form-label [nzFor]="'firstName'">
-              {{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}
-            </nz-form-label>
-            <nz-form-control [nzValidateStatus]="getNzStatus('firstName')">
-              <input nz-input id="firstName" formControlName="firstName"
-                     [placeholder]="'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate"/>
-              <nz-form-explain class="error"
-                               *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched">
-                {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
-              </nz-form-explain>
-            </nz-form-control>
-          </nz-form-item>
+        <div nz-row [nzGutter]="16">
+          <div nz-col [nzXs]="24" [nzSm]="12">
+            <nz-form-item>
+              <nz-form-label [nzFor]="'firstName'">
+                {{ 'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate }}
+              </nz-form-label>
+              <nz-form-control [nzValidateStatus]="getNzStatus('firstName')">
+                <input nz-input id="firstName" formControlName="firstName"
+                       [placeholder]="'MAIN.RESERVATIONS.FORM.FIRST_NAME' | translate"/>
+                <nz-form-explain class="error"
+                                 *ngIf="userForm.get('firstName')?.invalid && userForm.get('firstName')?.touched">
+                  {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FIRST_NAME' | translate }}
+                </nz-form-explain>
+              </nz-form-control>
+            </nz-form-item>
+          </div>
+
+          <div nz-col [nzXs]="24" [nzSm]="12">
+            <nz-form-item>
+              <nz-form-label [nzFor]="'secondName'">
+                {{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}
+              </nz-form-label>
+              <nz-form-control [nzValidateStatus]="getNzStatus('secondName')">
+                <input nz-input id="secondName" formControlName="secondName"
+                       [placeholder]="'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate"/>
+                <nz-form-explain *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched"
+                                 class="error">
+                  {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
+                </nz-form-explain>
+              </nz-form-control>
+            </nz-form-item>
+          </div>
         </div>
-
-        <div nz-col [nzXs]="24" [nzSm]="12">
-          <nz-form-item>
-            <nz-form-label [nzFor]="'secondName'">
-              {{ 'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate }}
-            </nz-form-label>
-            <nz-form-control [nzValidateStatus]="getNzStatus('secondName')">
-              <input nz-input id="secondName" formControlName="secondName"
-                     [placeholder]="'MAIN.RESERVATIONS.FORM.LAST_NAME' | translate"/>
-              <nz-form-explain *ngIf="userForm.get('secondName')?.invalid && userForm.get('secondName')?.touched"
-                               class="error">
-                {{ 'MAIN.RESERVATIONS.FORM.ERRORS.LAST_NAME' | translate }}
-              </nz-form-explain>
-            </nz-form-control>
-          </nz-form-item>
-        </div>
-      </div>
-
-      <nz-form-item>
-        <nz-form-label [nzFor]="'phoneNumber'">
-          {{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}
-        </nz-form-label>
-        <nz-form-control [nzValidateStatus]="getNzStatus('phoneNumber')">
-          <input nz-input id="phoneNumber" type="tel" formControlName="phoneNumber"
-                 [placeholder]="'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate"/>
-          <nz-form-explain *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched"
-                           class="error">
-            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-
-      <nz-form-item>
-        <nz-form-label [nzFor]="'email'">
-          {{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}
-        </nz-form-label>
-        <nz-form-control [nzValidateStatus]="getNzStatus('email')">
-          <input nz-input id="email" type="email" formControlName="email"
-                 [placeholder]="'MAIN.RESERVATIONS.FORM.E_MAIL' | translate"/>
-          <nz-form-explain *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
-            {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-      <nz-form-item>
 
         <nz-form-item>
-          <nz-form-label [nzFor]="'feedback'">
-            {{ 'MAIN.SHARED.TEXTAREA.TITLE' | translate }}
+          <nz-form-label [nzFor]="'phoneNumber'">
+            {{ 'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate }}
           </nz-form-label>
-          <nz-form-control [nzValidateStatus]="getNzStatus('feedback')" [nzSpan]="24" style="width: 100%;">
+          <nz-form-control [nzValidateStatus]="getNzStatus('phoneNumber')">
+            <input nz-input id="phoneNumber" type="tel" formControlName="phoneNumber"
+                   [placeholder]="'MAIN.RESERVATIONS.FORM.PHONE_NUMBER' | translate"/>
+            <nz-form-explain *ngIf="userForm.get('phoneNumber')?.invalid && userForm.get('phoneNumber')?.touched"
+                             class="error">
+              {{ 'MAIN.RESERVATIONS.FORM.ERRORS.PHONE_NUMBER' | translate }}
+            </nz-form-explain>
+          </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+          <nz-form-label [nzFor]="'email'">
+            {{ 'MAIN.RESERVATIONS.FORM.E_MAIL' | translate }}
+          </nz-form-label>
+          <nz-form-control [nzValidateStatus]="getNzStatus('email')">
+            <input nz-input id="email" type="email" formControlName="email"
+                   [placeholder]="'MAIN.RESERVATIONS.FORM.E_MAIL' | translate"/>
+            <nz-form-explain *ngIf="userForm.get('email')?.invalid && userForm.get('email')?.touched" class="error">
+              {{ 'MAIN.RESERVATIONS.FORM.ERRORS.E_MAIL' | translate }}
+            </nz-form-explain>
+          </nz-form-control>
+        </nz-form-item>
+        <nz-form-item>
+
+          <nz-form-item>
+            <nz-form-label [nzFor]="'feedback'">
+              {{ 'MAIN.SHARED.TEXTAREA.TITLE' | translate }}
+            </nz-form-label>
+            <nz-form-control [nzValidateStatus]="getNzStatus('feedback')" [nzSpan]="24" style="width: 100%;">
     <textarea
       nz-input
       id="feedback"
@@ -94,22 +95,40 @@
       maxlength="1000"
       [placeholder]="'MAIN.SHARED.TEXTAREA.PLACEHOLDER' | translate">
     </textarea>
-            <nz-form-explain class="error"
-                             *ngIf="userForm.get('feedback')?.invalid && userForm.get('feedback')?.touched">
-              {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FEEDBACK' | translate }}
-            </nz-form-explain>
+              <nz-form-explain class="error"
+                               *ngIf="userForm.get('feedback')?.invalid && userForm.get('feedback')?.touched">
+                {{ 'MAIN.RESERVATIONS.FORM.ERRORS.FEEDBACK' | translate }}
+              </nz-form-explain>
+            </nz-form-control>
+          </nz-form-item>
+
+          <nz-form-control>
+            <button class="contacts_btn" type="submit" [disabled]="!userForm.valid">
+              {{ 'MAIN.RESERVATIONS.FORM.SUBMIT' | translate }}
+            </button>
           </nz-form-control>
         </nz-form-item>
 
-        <nz-form-control>
-          <button type="submit" [disabled]="!userForm.valid">
-            {{ 'MAIN.RESERVATIONS.FORM.SUBMIT' | translate }}
-          </button>
-        </nz-form-control>
-      </nz-form-item>
-
-      <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
-    </form>
+        <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+      </form>
+      <nz-carousel
+        nzAutoPlay
+        [nzDots]="true"
+        [nzEffect]="'scrollx'"
+        class="testimonial-carousel">
+        @for (testimonial of testimonials; track testimonial) {
+          <div nz-carousel-content>
+            <div class="image-wrapper">
+              <img [src]="testimonial.image" [alt]="testimonial.image">
+            </div>
+            <div class="testimonial-slide">
+              <p class="testimonial-message">“{{ testimonial.message[lang] }}”</p>
+              <p class="testimonial-author">— {{ testimonial.name[lang] }}</p>
+            </div>
+          </div>
+        }
+      </nz-carousel>
+    </div>
     <div class="modal-overlay" *ngIf="showModal">
       <div class="modal-box">
         <h2 class="modal-title">
@@ -131,5 +150,6 @@
       </div>
     </div>
   </div>
+
 </div>
 <app-working-hours></app-working-hours>
