--- a/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
+++ b/src/app/components/app-main-section/components/contacts-page-section/contacts-page-section.component.scss
@@ -4,6 +4,19 @@
 @import '../../../../../assets/modules/modal';
 
 
+:host ::ng-deep .ant-picker,
+:host ::ng-deep .ant-picker-input > input {
+  font-size: 1rem !important;
+}
+
+:host ::ng-deep .testimonial-carousel .slick-dots li button {
+  background-color: #ccc !important; // default dot color
+}
+
+:host ::ng-deep .testimonial-carousel .slick-dots li.slick-active button {
+  background-color: #333 !important; // active dot color
+}
+
 :host ::ng-deep .ant-row {
   width: 100%;
 }
@@ -65,6 +78,7 @@
 
 .form-container {
   max-width: 700px;
+  max-height: 658px;
   border-radius: 10px;
   padding: 20px;
   display: flex;
@@ -94,7 +108,7 @@
   font-size: 14px;
 }
 
-button {
+.contacts_btn {
   width: 100%;
   padding: 10px;
   font-size: 16px;
@@ -118,6 +132,70 @@ button {
   }
 }
 
+.form-test-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @include atMedium {
+    flex-direction: row;
+  }
+}
+
+.testimonial-carousel {
+  width: 100%;
+  max-width: 500px;
+  max-height: 550px;
+  margin: 50px auto;
+}
+
+.testimonial-slide {
+  margin-top: 280px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.testimonial-message {
+  font-size: 1.2rem;
+  font-style: italic;
+}
+
+.testimonial-author {
+  margin-top: 1rem;
+  font-weight: bold;
+  color: #666;
+}
+
+
+.image-wrapper {
+  position: absolute;
+  top: 125px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 5px solid white;
+  background-color: #ddd;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  @include atMedium {
+    top: 50px;
+    width: 200px;
+    height: 200px;
+  }
+}
+
 @media (max-width: 768px) {
   input,
   textarea,
@@ -125,4 +203,3 @@ button {
     font-size: 1rem;
   }
 }
-
