--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -132,7 +132,7 @@
 
   <nz-form-item>
     <nz-form-control>
-      <button type="submit" [disabled]="!userForm.valid">
+      <button class="reservation_btn" type="submit" [disabled]="!userForm.valid">
         {{ 'MAIN.RESERVATIONS.FORM.SUBMIT' | translate }}
       </button>
     </nz-form-control>
