--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -37,11 +37,10 @@ nz-form-label {
 }
 
 .form-container {
-  max-width: 760px;
+  width: 660px;
   margin: 0 auto 100px;
   border-radius: 10px;
   padding: 20px 20px 0 20px;
-  display: flex;
   flex-direction: column;
   gap: 1rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -58,7 +57,7 @@ nz-form-label {
   color: red;
 }
 
-button {
+.reservation_btn {
   width: 100%;
   padding: 10px;
   font-size: 16px;
@@ -67,6 +66,7 @@ button {
   color: white;
   background: $mainRoseAsh;
   cursor: pointer;
+  margin-bottom: 20px;
 
   &:hover {
     background: grey;
