--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -126,6 +126,10 @@
         text-shadow: 2px 2px 5px rgba(225, 134, 134, 0.5);
 
         @include atMedium{
+          font-size: 1.2rem;
+        }
+
+        @media (max-width: 1100px) {
           font-size: 1rem;
         }
       }
