--- a/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
+++ b/src/app/components/app-main-section/components/about-us-page-section/about-us-page-section.component.scss
@@ -75,6 +75,7 @@
 
 .about-us_description {
   padding: 15px;
+  margin-top: 10px;
 
   @include atMedium {
     padding-top: 0;
@@ -95,7 +96,6 @@
 .instructor-card {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: #ffffff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   border-radius: 1rem;
@@ -151,7 +151,6 @@
 
     .instructor-image {
       width: 40%;
-      height: 100%;
     }
 
     .instructor-info {
