--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 75px;
   background: #FFF;
-  background: linear-gradient(90deg,rgba(255, 255, 255, 1) 14%, rgba(248, 180, 177, 1) 29%, rgba(248, 180, 177, 1) 100%);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 14%, rgba(248, 180, 177, 1) 29%, rgba(248, 180, 177, 1) 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,8 +19,8 @@
     display: flex;
     align-items: center;
 
-    @include atMedium{
-    margin-left: 20px;
+    @include atMedium {
+      margin-left: 20px;
     }
   }
 
@@ -125,11 +125,11 @@
         font-size: 20px;
         text-shadow: 2px 2px 5px rgba(225, 134, 134, 0.5);
 
-        @include atMedium{
+        @include atMedium {
           font-size: 1.2rem;
         }
 
-        @media (max-width: 1100px) {
+        @media (max-width: 1100px) and (min-width: 801px) {
           font-size: 1rem;
         }
       }
@@ -209,7 +209,7 @@
   }
 
   @include atMedium {
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,240,242,1) 20%, rgba(248,180,177,1) 46%, rgba(248,180,177,1) 100%);
+    background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 240, 242, 1) 20%, rgba(248, 180, 177, 1) 46%, rgba(248, 180, 177, 1) 100%);
   }
 }
 
