--- a/src/assets/modules/_btn.scss
+++ b/src/assets/modules/_btn.scss
@@ -8,6 +8,10 @@
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
+
+  @include atMedium {
+    font-size: 1.2rem;
+  }
 }
 
 
