--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.scss
@@ -93,17 +93,18 @@
   }
 
   &__subtitle {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 300;
     color: grey;
-    margin: 0;
+    margin-top: 0;
 
     @include atSmall {
-      font-size: 2.3rem;
+      font-size: 1.4rem;
     }
 
     @include atMedium {
       font-size: 3.4rem;
+      margin: 0;
     }
 
     @include atLarge {
@@ -118,7 +119,6 @@
 
     @include atSmall {
       margin: 0;
-      font-size: 1.2rem;
       margin-left: auto;
       margin-right: auto;
       max-width: 400px;
